fixed overflowing text on mobile view

--- a/static/accounts/css/login.css
+++ b/static/accounts/css/login.css
@@ -222,3 +222,17 @@ form:hover {
 }
 
 
+
+
+@media screen and (max-width: 480px) {
+
+}
+
+
+@media screen and (max-width: 600px) {
+
+}
+
+@media screen and (max-width: 992px) {
+
+}
